# bootstrap-uv

./: .gitignore  Makefile  README.md  cli.py  main.py  pyproject.toml
bootstrap_uv/: calc.py  hello.py  pandas1.py  test.py  version.py
